Java helloworld aot (#49)
* fix: removed heading format for the first line

* feat(post): add post about aot compilation

* fix: table columns

* docs: update by replacing yeoman generator with java AddPost